--- a/FLACSO_final.ipynb
+++ b/FLACSO_final.ipynb
@@ -13,7 +13,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "***Federico Manrupe. Curso de python para ciencia de datos. FLACSO.***\n",
+        "# ***Federico Manrupe. Curso de python para ciencia de datos. FLACSO.***\n",
+        "\n",
+        "*12/12/2022*\n",
         "\n",
         "\n",
         "\n",
